kubernetes/lattice.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: amazon-vpc-lattice
spec:
  controllerName: application-networking.k8s.aws/gateway-api-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lattice-gateway
  namespace: default
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All 
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: <APP>
  namespace: <NAMESPACE>
spec:
  parentRefs:
  - name: lattice-gateway
    sectionName: http
  hostnames:
  - "analytics.vitalforge.internal"
  rules:
  - backendRefs:
    - name: engine-svc
      kind: Service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: <APP>
  namespace: <NAMESPACE>
spec:
  parentRefs:
    - name: <APP>
      sectionName: http
      namespace: <NAMESPACE>
  rules:
    - matches:
      - path:
        type: Exact
        value: /healthcheck
      backendRefs:
        - name: <SERVICE>
          kind: Service
          namespace: <NAMESPACE>
